Fix profile layout overflow caused by long string journal

--- a/app/assets/stylesheets/grid_layout.scss
+++ b/app/assets/stylesheets/grid_layout.scss
@@ -14,6 +14,7 @@ body {
 .page-content {
   grid-area: body-content;
   width: 60vw;
+  max-width: 60vw;
   justify-content: center;
   align-items: center;
   text-align: center;
